<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/eletric_car"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tab_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/carros"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <TextView
        android:id="@+id/tv_tab_favotitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/favoritos"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_tab_carros"
        app:layout_constraintTop_toTopOf="@id/tv_tab_carros" />

    <ImageView
        android:id="@+id/im_carro1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:src="@drawable/car1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_carros" />

    <TextView
        android:id="@+id/tv_preço"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_carro1" />

    <TextView
        android:id="@+id/tv_preço_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="300.000,00"
        app:layout_constraintStart_toEndOf="@+id/tv_preço"
        app:layout_constraintTop_toBottomOf="@id/im_carro1" />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/bateria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preço" />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="300.000,00"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_preço_value" />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/potencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="300.000,00"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria_value" />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/recarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="23 min"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia_value" />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="number"
        android:maxLength="200"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/tv_recarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/km_percorrido"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
        app:layout_constraintEnd_toEndOf="@id/et_preco_kwh"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_calcular"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"/>

    <RadioGroup
        android:id="@+id/rg_mopa_ou_meuca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular">

        <RadioButton
            android:id="@+id/rb_mopa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_mopa"/>

        <RadioButton
            android:id="@+id/rb_meuca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_meuca"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_mopa"
        app:layout_constraintStart_toStartOf="@id/rg_mopa_ou_meuca"
        app:layout_constraintTop_toBottomOf="@id/rg_mopa_ou_meuca">

    </CheckBox>

    <CheckBox
        android:id="@+id/cb_item_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_meuca"
        app:layout_constraintStart_toStartOf="@id/rg_mopa_ou_meuca"
        app:layout_constraintTop_toBottomOf="@id/cb_item_1">

    </CheckBox>

    <Switch
        android:id="@+id/s_lampada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cb_item_2"
        app:layout_constraintStart_toStartOf="@id/cb_item_2"
        android:text="Ligar lâmpada?"/>

    <Spinner
        android:id="@+id/s_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/array_cidades"
        app:layout_constraintTop_toBottomOf="@+id/s_lampada"
        app:layout_constraintStart_toStartOf="@+id/s_lampada"/>


</androidx.constraintlayout.widget.ConstraintLayout>